bugfix(ui): Last Credential Cut Off in Credentials Screen (#392)
* fix: top style bug & unify templates

* fix: unnecessary margin on top of creds

* fix: credential animation naming

--- a/src/ui/components/CredCardTemplate/CredCardTemplate.scss
+++ b/src/ui/components/CredCardTemplate/CredCardTemplate.scss
@@ -1,7 +1,6 @@
 .cred-card-template {
   height: 13.375rem;
   width: 100%;
-  margin-top: 1.5rem;
   padding: 1.25rem 1.56rem;
   border-radius: 1rem;
   font-size: 0.875rem;
@@ -348,7 +347,6 @@
 
   @media screen and (min-width: 250px) and (max-width: 370px) {
     height: 10.7rem;
-    margin-top: 1.275rem;
     padding: 1.06rem 1.326rem;
     border-radius: 0.85rem;
     font-size: 0.75rem;
